Fix left/right arrow alignment

--- a/app/assets/stylesheets/components/_gallery.sass
+++ b/app/assets/stylesheets/components/_gallery.sass
@@ -231,6 +231,7 @@ $slide-width: 1000px
   font-weight: bold
   height: 50px
   line-height: 50px
+  margin-top: -25px
   position: absolute
   color: white
   text-decoration: none
